# NovaBluetooth

./: .gitignore  CHANGELOG.md  LICENSE  README.md  meson.build
.github/workflows/: build.yml  release.yml
data/: meson.build  nova-bluetooth.css  nova-bluetooth.desktop.in
debian/: copyright
pkg/archlinux/: PKGBUILD
pkg/debian/: changelog  control  copyright  rules
pkg/fedora/: nova-bluetooth.spec
src/: meson.build  plugin.vala
src/bluetooth/: adapter.vala  dbus_interfaces.vala  device.vala  manager.vala
src/utils/: css_loader.vala
src/widgets/: device_list.vala  device_row.vala  indicator_button.vala  popover_menu.vala
vapi/: libxfce4panel-2.0.vapi  libxfce4ui-2.vapi  libxfce4util-1.0.vapi  libxfconf-0.vapi
